# Carina

./: .editorconfig  .gitignore  Cargo.toml  book.toml  carina.pest  designgoals.md  ideas.md  notes.md  readme.md  samples.md  specification.md  todos.md
.cargo/: config
docs/: designgoals.md  implnotes.md  readme.md  specification.md  summary.md
docs/gists/: carina.md  experimental.md  scrapbook.md
docs/ideas/: ideas.md
examples/: example.ca  example2.ca
gists/: carina.md  experimental.md  samples.md  scrapbook.md  specification.md  types.md
ideas/: reasons.md  testcases.md  todos.md
resources/: sample1.ca
src/: carina-alpha.pest  carina-alpha.scrapped-1.pest  main.rs  parser.rs  parser.rs.bak-before-context  parser.rs.bak-with-parser  parser.rs.bak-without-deps  parser.rs.bak.ok  preprocessor.rs  start.rs
src-old/2019-06-18/: beta.pest  carina.pest  start.rs  test.ca
src-old/2019-06-20/: start.rs
src-old/2019-06-21/: start.rs
src/parser/: ast.rs  result.rs
src/parser2/: combinators.rs  mod.rs  types.rs  values.rs
