[package]
name        = "carina"
version     = "0.0.1"
authors     = ["Christian Sdunek <me@systemcluster.me>"]
edition     = "2018"
publish     = false
license     = "unlicensed"

[[bin]]
name = "carina"
path = "src/main.rs"

[profile.dev]
opt-level = 0
panic = "unwind"
debug = true
debug-assertions = true

[profile.test]
opt-level = 1
debug = true
debug-assertions = true

[profile.release]
opt-level = 3
panic = "abort"
debug = false
debug-assertions = false

[dependencies]
chrono = { version = "0.4.7", features = ["serde"] }
rand = "0.7.0"
unicode-segmentation = "1.3.0"
unicode_reader = "1.0.0"
regex = "1.1.7"
log = "0.4.6"
pretty_env_logger = "0.3.0"
copyless = "0.1.4"
serde = "1.0.94"
serde_derive = "1.0.94"
derive_more = "0.15.0"
env_logger = "0.6.1"
lazy_static = "1.3.0"
rayon = "1.1.0"
structopt = "0.2.18"
itertools = "0.8.0"
color-backtrace = "0.2.1"
async-log = "1.0.4"
